--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>The Concordium</h1>
-    <p>Explore the characters of the Seven Deadly Sins and Seven Heavenly Virtues</p>
+    <p>Explore the Concordants of the Seven Deadly Sins and Seven Heavenly Virtues</p>
   </header>
   <main>
     <div id="character-container"></div>
