--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>The Concordium</h1>
-    <p>Explore the <u>Concordants</u> of the Seven Deadly Sins and Seven Heavenly Virtues</p>
+    <p>Explore the <u>Concordants</u> of the <u>Seven Deadly Sins</u> and <u>Seven Heavenly Virtues</u></p>
   </header>
   <main>
     <div id="character-container"></div>
