--- a/character.html
+++ b/character.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1 id="character-name"></h1>
+    <h1 id="character-name" style="font-size: 2em;"></h1>
   </header>
   <main>
     <div id="character-details"></div>
