--- a/character.html
+++ b/character.html
@@ -11,7 +11,7 @@
     <h1 id="character-name" style="font-size: 4em;"></h1>
   </header>
   <main>
-    <div id="character-details"></div>
+    <div id="character-details" style="font-size: 2em;"></div>
   </main>
   <script src="script.js"></script>
 </body>
